--- a/index.html
+++ b/index.html
@@ -11,23 +11,26 @@
             National art gallery
         </h5>
         <p>
-            <b>National art gallery<br></b>The National Gallery of Art, and its attached Sculpture Garden, is a national art museum in Washington, D.C., United States, located on the National Mall, between 3rd and 9th Streets, at Constitution Avenue NW.</b>
+            <b>Museum<br></b>The National Gallery of Art, and its attached Sculpture Garden, is a national art museum in Washington, D.C., United States, located on the National Mall, between 3rd and 9th Streets, at Constitution Avenue NW.</b>
              It contains drawings, sculptures and photographs which are donated by <b>andrew.</b>The old paintings and sculptures are must to be seen when you visit.
         </p>
         
         <ol>
             <hr>
-            <li><h3> Landmark near the museum</h3></li>
-            <li><p>O'Hare Airport stop, the nearest airport to the museum. The distance between the airport and the museum is 16.8 miles.<br> It will take 20 mins to reach the airport from museum.</p></li>
-            <li><p>Chicago Transit (CTA) operates a vehicle from O'Hare to Jackson-Blue every 10 minutes. Tickets cost $1 - $5 and the journey takes 43 min.<br>
-                 Alternatively, you can take a bus from Chicago O'Hare Airport (ORD) to Soldier Field & Field Museum via Union Station, Jackson & Canal and Clinton & Quincy in around 1h 51m.</p></li>
+            <li><h2> Directions to museum</h2></li>
+            <li><p>The nearest airport is reagan washington airport. go straight from airport and reach the cross intersection of octoland.<br> It will take 20 mins to reach the airport from museum.</p></li>
+            <li><p>Here take <b>tram</b> and reach museum without getting struck in trafic.</p></li>
+            <li>Heavy luggages are not allowed in tram.</li>
         </ol>
+        <h3>Things around museum</h3>
         <ul>
-            <li>Shedd Aquarium, Located on the shore of Lake Michigan, Shedd Aquarium brings you eye-to-eye with unbelievable aquatic animals—from whales to snails, tarantulas to turtles, angelfish to zebra sharks</li>
-            <li>Millennium Park, Three square blocks of open lakefront complete with a Ferris Wheel, outdoor music pavillion and ice skating rink; expected to become one of the city's most popular sites.
-            </li>
+
+            <li>National air and space museum</li>
+            <li>National mall</li>
+            <li>Sculpture garden</li>
+            <li>Major Hancock statue</li>
         </ul>
-        <b><a href="https://github.com/44-563-Web-Apps-F22/44563-webapps-assignment-3-NikhilVarma9/blob/main/aboutme.html"> aboutme link</a></b>
+        <b><a href="https://github.com/44-563-Web-Apps-F22/44563-webapps-assignment-3-SRS-P/blob/main/aboutme.html"> aboutme link</a></b>
     </body>
 </html>
     </body>
