--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         </title>
     </head>
     <body>
+        <b><a href="file:///C:/Users/s555578/Desktop/webapps-repo/44563-webapps-assignment-3-SRS-P/bonus.html"> BONUS</a></b>
         <h1> Siva Ram Sai Paruchuri</h1>
         <h5>
             National art gallery
