--- a/bonus.html
+++ b/bonus.html
@@ -15,6 +15,7 @@
 
              </ul>
              <i><img src="https://www.thoughtco.com/thmb/0WDw6IRpBeBQkh1Dc7ketpa-4EU=/1836x1377/smart/filters:no_upscale()/GettyImages-635477020-14202280a8714a179f5850decf0d254e.jpg"> Image path</i>
+             <b><a href="file:///C:/Users/s555578/Desktop/webapps-repo/44563-webapps-assignment-3-SRS-P/index.html"> indexfile link</a></b>
     </body>
 
 </html>
